// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders create preset modal 1`] = `
<div
  className="c-modal m-input-modal"
>
  <div
    className="m-input-modal__title"
  >
    Save open routes as preset
  </div>
  <div
    className="m-input-modal__input"
  >
    <input
      onChange={[Function]}
      placeholder="Name your preset…"
    />
  </div>
  <div
    className="m-input-modal__buttons"
  >
    <button
      onClick={[Function]}
    >
      Cancel
    </button>
    <button
      onClick={[Function]}
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Modal renders inactive notification modal when appropriate 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      Sorry, there's no additional information that we can provide you about this notification.
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`Modal renders loading modal when appropriate 1`] = `
Array [
  <div
    className="c-modal m-notification-loading-modal"
  >
    <div
      className="m-notification-loading-modal__spinner-wrapper"
    >
      <span
        className="c-loading-spinner"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </div>
    <div
      className="m-notification-loading-modal__text-wrapper"
    >
      Loading...
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`Modal renders save preset modal 1`] = `
<div
  className="c-modal m-input-modal"
>
  <div
    className="m-input-modal__title"
  >
    Overwrite 
    My Preset
  </div>
  <div
    className="m-input-modal__buttons"
  >
    <button
      onClick={[Function]}
    >
      Cancel
    </button>
    <button
      onClick={[Function]}
    >
      Save
    </button>
  </div>
</div>
`;
